# souz

./: .dockerignore  .git_diff_list.txt  .gitignore  AGENTS.md  CLAUDE.md  ExcelRead_backup.kt  INFO.md  README.md  backend.Dockerfile  build.gradle.kts  gradle.properties  kmp-build-macos-universal.sh  local.properties  settings.gradle.kts  show_buttons.scpt  voice.md
.github/: CODEOWNERS
.run/: souz en local run.run.xml  souz local run.run.xml  союз ИИ local run.run.xml
agent/: AGENTS.md  INFO.md  README.md  build.gradle.kts
ambientAgent/: build.gradle.kts
androidApp/: README.md  build.gradle.kts
backend/: AGENTS.md  INFO.md  build.gradle.kts
build-logic/: build.gradle.kts  kmp-build-macos-dev.sh  kmp-build-macos-universal.sh  prepare-homebrew-release.sh
composeApp/: .gitignore  AGENTS.md  README.md  build.gradle.kts  clients.xlsx  locality.gradle.kts  stats.xlsx  test_date_format.xlsx  test_date_format_v2.xlsx  test_write_debug.xlsx
desktopApp/: AGENTS.md  build.gradle.kts
dest/: privacy-policy.html
docs/: CONTRIBUTING.md  ambient-agent.md  bug-fix-doc.md  cloud-multiuser-agent-spec.md  config-store-security.md  file-tools.md  homebrew.md  release.md  server-agent-concept.md  skills.md  telemetry-backend.md  voice-transcription.md
gradle/: libs.versions.toml
graph-engine/: AGENTS.md  INFO.md  README.md  build.gradle.kts
llms/: AGENTS.md  INFO.md  README.md  build.gradle.kts
native/: AGENTS.md  INFO.md  README.md  build.gradle.kts
native/llama-bridge/: CMakeLists.txt
native/llama-bridge/include/: souz_llama_bridge.h
native/llama-bridge/patches/: llama.cpp-metal-bfloat-embed.patch
native/llama-bridge/src/: souz_llama_bridge.cpp
(+1760 files in other folders)
